--- a/map-plot-example/index.html
+++ b/map-plot-example/index.html
@@ -36,13 +36,13 @@
             'Straight as an Arrow': '#FFFF33',
             'Straight': '#FFCC33',
             'Average': '#FF9933',
-            'Pretty Gay': '#FF6633',
-            'Super Gay': '#FF3333',
+            'High': '#FF6633',
+            'Higher': '#FF3333',
             defaultFill: '#E6FFCC'
         },
         data: {
             "AZ": {
-                "fillKey": "Pretty Gay",
+                "fillKey": "High",
                 "lgbtPopulation": 3.9
             },
             "CO": {
@@ -62,7 +62,7 @@
                 "lgbtPopulation": 3.5
             },
             "HI": {
-                "fillKey": "Super Gay",
+                "fillKey": "Higher",
                 "lgbtPopulation": 5.1
             },
             "ID": {
@@ -86,7 +86,7 @@
                 "lgbtPopulation": 3.7
             },
             "KY": {
-                "fillKey": "Pretty Gay",
+                "fillKey": "High",
                 "lgbtPopulation": 3.9
             },
             "LA": {
@@ -98,11 +98,11 @@
                 "lgbtPopulation": 3.3
             },
             "ME": {
-                "fillKey": "Super Gay",
+                "fillKey": "Higher",
                 "lgbtPopulation": 4.8
             },
             "MA": {
-                "fillKey": "Pretty Gay",
+                "fillKey": "High",
                 "lgbtPopulation": 4.4
             },
             "MN": {
@@ -134,7 +134,7 @@
                 "lgbtPopulation": 2.7
             },
             "NV": {
-                "fillKey": "Pretty Gay",
+                "fillKey": "High",
                 "lgbtPopulation": 4.2
             },
             "NH": {
@@ -166,7 +166,7 @@
                 "lgbtPopulation": 3.4
             },
             "OR": {
-                "fillKey": "Super Gay",
+                "fillKey": "Higher",
                 "lgbtPopulation": 4.9
             },
             "PA": {
@@ -174,7 +174,7 @@
                 "lgbtPopulation": 2.7
             },
             "RI": {
-                "fillKey": "Super Gay",
+                "fillKey": "Higher",
                 "lgbtPopulation": 4.5
             },
             "SC": {
@@ -182,7 +182,7 @@
                 "lgbtPopulation": 2.9
             },
             "SD": {
-                "fillKey": "Pretty Gay",
+                "fillKey": "High",
                 "lgbtPopulation": 4.4
             },
             "TN": {
@@ -206,11 +206,11 @@
                 "lgbtPopulation": 2.9
             },
             "VT": {
-                "fillKey": "Super Gay",
+                "fillKey": "Higher",
                 "lgbtPopulation": 4.9
             },
             "WA": {
-                "fillKey": "Pretty Gay",
+                "fillKey": "High",
                 "lgbtPopulation": 4.0
             },
             "WV": {
@@ -222,7 +222,7 @@
                 "lgbtPopulation": 2.9
             },
             "CA": {
-                "fillKey": "Pretty Gay",
+                "fillKey": "High",
                 "lgbtPopulation": 4.0
             },
             "CT": {
