updated map example color scheme

--- a/common/map-plot-example/index.html
+++ b/common/map-plot-example/index.html
@@ -33,11 +33,11 @@
         element: document.getElementById('container'),
         scope: 'usa',
         fills: {
-            'Straight as an Arrow': '#FFFF33',
-            'Straight': '#FFCC33',
-            'Average': '#FF9933',
-            'High': '#FF6633',
-            'Higher': '#FF3333',
+            'Straight as an Arrow': '#edf8fb',
+            'Straight': '#b3cde3',
+            'Average': '#8c96c6',
+            'High': '#8856a7',
+            'Higher': '#810f7c',
             defaultFill: '#E6FFCC'
         },
         data: {
