updated map colors and presentation

--- a/common/map-plot-example/index.html
+++ b/common/map-plot-example/index.html
@@ -33,12 +33,12 @@
         element: document.getElementById('container'),
         scope: 'usa',
         fills: {
-            'Straight as an Arrow': '#edf8fb',
-            'Straight': '#b3cde3',
-            'Average': '#8c96c6',
-            'High': '#8856a7',
-            'Higher': '#810f7c',
-            defaultFill: '#E6FFCC'
+            'Straight as an Arrow': '#ffffb2',
+            'Straight': '#fecc5c',
+            'Average': '#fd8d3c',
+            'High': '#f03b20',
+            'Higher': '#bd0026',
+            defaultFill: '#3498db'
         },
         data: {
             "AZ": {
